Race when reusing PerRegionTable bitmaps may result in dropped remembered set entries

XMLWordPrintable

    • gc
    • b04
    • Not verified

        Running the remembered set stress test from JDK-8134963 causes infrequent

        Crash Internal Error ...heapRegionRemSet.cpp...assert(contains_reference(from)) failed: We just added it!

        assertion failures.

        The same issue has already been observed earlier in JDK-8017474 but closed there because of being unable to reproduce. There is also a known customer issue that after analysis shows the same problem.

        Created a new CR because JDK-8017474 is already so old and has a lot of comments.

              Assignee:
              Thomas Schatzl
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: