8147087: Race when reusing PerRegionTable bitmaps may result in dropped remembered set entries

Do not make reused PRTs available to other threads before the bitmap of the PRT has been cleared.

Co-authored-by: Poonam Bajaj <poonam.bajaj@oracle.com>
Reviewed-by: tbenson, mgerdin